# PyNoteCLI

./: README.md  main.py  pyproject.toml  test.py
.github/workflows/: publish.yml
PyNoteCLI Notes/: Blueprint.md  Idea.md  What's done.md
PyNoteCLI Notes/Blueprints/: Notes Handling.md  Page Handling.md
src/pynotecli/: __init__.py  bundler.py  main.py  paths.py
src/pynotecli/commands/: __init__.py  config.py  note.py  page.py
src/pynotecli/core/: __init__.py  global_vars.py  note_manager.py  page_manager.py  pages.py  setup_storage.py
src/pynotecli/data_storage/: __init__.py  page_storage.py  pages.py
src/pynotecli/database/: pages.db
src/pynotecli/dataclasses/: classes.py
